<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>erupt-bi</artifactId>
    <version>${erupt.version}</version>
    <description>报表模块</description>

    <parent>
        <groupId>xyz.erupt</groupId>
        <artifactId>erupt</artifactId>
        <version>1.2.1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>${erupt.groupId}</groupId>
            <artifactId>erupt-auth</artifactId>
            <version>${erupt.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>
